@startuml
class Usuario {
    - nome: String
    - cpf: String
    + cadastrar()
    + consultarExtrato()
}

class Aluno {
    - email: String
    - rg: String
    - endereco: String
    - instituicao: InstituicaoEnsino
    - curso: String
    - saldoMoedas: int
    + trocarMoedas()
}

class Professor {
    - departamento: String
    - saldoMoedas: int
    - instituicao: InstituicaoEnsino
    + distribuirMoedas()
}

class EmpresaParceira {
    - nome: String
    - vantagens: List<Vantagem>
    + cadastrar()
    + cadastrarVantagem()
}

class Vantagem {
    - descricao: String
    - custoEmMoedas: int
    - foto: String
    + cadastrar()
}

class InstituicaoEnsino {
    - nome: String
    - professores: List<Professor>
    + adicionarAluno()
    + adicionarProfessor()
}

class GerenciadorDeVantagens {
    + resgatarVantagem(aluno: Aluno, vantagem: Vantagem)
}

class GerenciadorDeMoedas {
    + distribuirMoedas(professor: Professor, aluno: Aluno, quantidade: int)
}

Usuario <|-- Aluno
Usuario <|-- Professor
Professor --> InstituicaoEnsino
Aluno --> InstituicaoEnsino
EmpresaParceira "1" -up-> "0..*" Vantagem : oferece
GerenciadorDeVantagens "1" --> "0..*" Vantagem : gerencia
GerenciadorDeMoedas "1" -up-> "0..*" Professor : distribui moedas
GerenciadorDeMoedas "1" --> "0..*" Aluno : distribui para
GerenciadorDeVantagens "1" --> "0..*" Aluno : resgata
@enduml
